# cs_discord_rs

./: .gitignore  Cargo.toml
src/: classes.rs  main.rs
