[package]
name = "cs_discord_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.3.0"
tokio = { version = "1.20.1", features = ["full"] }
dotenv = "0.15.0"
mongodb = "2.3.0"
#mongod = { version = "0.3", features = ["derive"] }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
seq-macro = "0.3"
itertools = "0.10.2"
human-sort = "0.2.2"

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["builder", "client", "gateway", "model", "utils", "collector"]
